# ComfyUI_Step_Audio_EditX_SM

./: README.md  SAEditX_SM_node.py  __init__.py  model_loader_utils.py  pyproject.toml  requirements.txt
Step_Audio_EditX/: Dockerfile  README.md  app.py  model_loader.py  requirements.txt  tokenizer.py  tts.py  tts_infer.py  utils.py
Step_Audio_EditX/config/: __init__.py  edit_config.py  prompts.py
Step_Audio_EditX/funasr_detach/: __init__.py
Step_Audio_EditX/funasr_detach/auto/: auto_frontend.py  auto_model.py
Step_Audio_EditX/funasr_detach/datasets/audio_datasets/: datasets.py  index_ds.py  preprocessor.py  samplers.py
Step_Audio_EditX/funasr_detach/download/: download_from_hub.py  runtime_sdk_download_tool.py
Step_Audio_EditX/funasr_detach/frontends/: default.py  fused.py  s3prl.py  wav_frontend.py
Step_Audio_EditX/funasr_detach/frontends/utils/: dnn_beamformer.py  dnn_wpe.py  feature_transform.py  frontend.py  log_mel.py  mask_estimator.py  stft.py
Step_Audio_EditX/funasr_detach/losses/: label_smoothing_loss.py
Step_Audio_EditX/funasr_detach/models/bat/: model.py
Step_Audio_EditX/funasr_detach/optimizers/: __init__.py
Step_Audio_EditX/funasr_detach/schedulers/: __init__.py  noam_lr.py  tri_stage_scheduler.py  warmup_lr.py
Step_Audio_EditX/funasr_detach/tokenizer/: build_tokenizer.py  char_tokenizer.py  phoneme_tokenizer.py  sentencepiece_tokenizer.py  word_tokenizer.py
Step_Audio_EditX/funasr_detach/train_utils/: trainer.py
Step_Audio_EditX/funasr_detach/utils/: load_utils.py  speaker_utils.py
example_workflows/: saeditx.json
(+113 files in other folders)
